--- a/app/src/main/res/layout/init.xml
+++ b/app/src/main/res/layout/init.xml
@@ -81,12 +81,35 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="1.0"></ListView>
+        android:layout_weight="1.0" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="版本号"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/et_filter_version"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:text="1.0.0" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="格式如下：1.0.0"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -127,8 +150,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
+                android:digits="-0123456789"
                 android:inputType="number"
-                android:text="-60" />
+                android:text="-100" />
         </LinearLayout>
 
         <LinearLayout
@@ -150,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:inputType="number"
-                android:text="2" />
+                android:text="10" />
         </LinearLayout>
 
     </LinearLayout>
